Update server ip address

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <script>
         // ★ 중요: 'YOUR_VULTR_IP'를 실제 Vultr 서버 IP로 변경하세요!
-        const VULTR_SERVER_IP = "45.77.151.72";
+        const VULTR_SERVER_IP = "localhost";
         const ws = new WebSocket(`ws://${VULTR_SERVER_IP}:8000/ws`);
 
         const video = document.getElementById('video');
