Change map directory

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         const backgroundCanvas = document.getElementById('background-canvas');
         const backgroundCtx = backgroundCanvas.getContext('2d');
         const mapImage = new Image();
-        mapImage.src = './public/assets/background_ingame_final_final.png';
+        mapImage.src = '/assets/maps/background_ingame_final_final.png';
         
         // 원 그리기용 캔버스
         const circleCanvas = document.getElementById('circle-canvas');
