Another Big thing

--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
 
     <!-- 게임 UI -->
     <div id="game-ui">
+      <div
+        id="witch-hp"
+        style="color: #00ff00; font-size: 28px; margin-bottom: 15px"
+      >
+        HP: 1000/1000 (100%)
+      </div>
       <div id="score">Score: 0</div>
       <div id="wave">Wave: 1</div>
       <div id="gold">Gold: 0</div>
