Add landing and game over screen

--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
     </style>
   </head>
   <body>
+    <!-- 랜딩 화면 캔버스 -->
+    <canvas id="landing-canvas" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1000;"></canvas>
+    
+    <!-- 게임 오버 화면 캔버스 -->
+    <canvas id="gameover-canvas" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 999; display: none;"></canvas>
+    
     <canvas id="background-canvas"></canvas>
     <canvas id="circle-canvas"></canvas>
 
