Change game score location

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       /* 게임 UI */
       #game-ui {
         position: fixed;
-        top: 5px;
-        left: 41%;
+        top: 9px;
+        left: 43%;
         transform: translateX(-50%);
         color: #f5eac4;
         font-family: "Arial", sans-serif;
@@ -151,7 +151,7 @@
     />
 
     <!-- 게임 UI -->
-    <div id="game-ui">
+    <div id="game-ui" style="font-family: 'IM Fell English SC', 'Cinzel', 'Crimson Text', serif;">
       <div id="score">0</div>
     </div>
 
