Update countdown screen

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- 중앙 상단 Status2 이미지 -->
     <img
       id="status2-display"
-      src="./public/assets/Status/status2.png"
+      src="assets/Status/status2.png"
       alt="Status Display"
       style="
         position: fixed;
@@ -101,7 +101,7 @@
     <!-- Guide 버튼 (Status2 우상단) -->
     <img
       id="guide-button"
-      src="./public/assets/Status/Guide.png"
+      src="assets/Status/guide.png"
       alt="Guide Button"
       style="
         position: fixed;
@@ -120,7 +120,7 @@
     <!-- Skip 버튼 (Guide 버튼 아래) -->
     <img
       id="skip-button"
-      src="./public/assets/Status/Skip.png"
+      src="assets/Status/skip.png"
       alt="Skip Button"
       style="
         position: fixed;
@@ -138,6 +138,7 @@
 
     <!-- Score 이미지 -->
     <img
+      id="score-image"
       src="assets/Status/score.png"
       alt="Score"
       style="
