--- a/index.html
+++ b/index.html
@@ -43,9 +43,24 @@
         height: 100vh;
         z-index: 1;
       }
-      #canvas-container canvas,
-      video {
+      #canvas-container canvas {
         display: none;
+      }
+      #video {
+        display: none;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        width: 320px;
+        height: 240px;
+        border: 3px solid #f5eac4;
+        border-radius: 10px;
+        z-index: 200;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+        transform: scaleX(-1);
+      }
+      #video.visible {
+        display: block;
       }
       /* Game UI */
       #game-ui {
